--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,27 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+	font-optical-sizing: auto;
+	font-size: 16px;
+	color: #FFF;
+	background-color: #1010db;
+	background-image: radial-gradient(#a0bdf7 1.1px, #1010db 1.1px);
+	background-size: 22px 22px;
+	font-family: "Jersey 10", sans-serif;
+	font-weight: 400;
+	font-style: normal;
 }
+#header {
+	text-align: center;
+	color: #FFF;
+	opacity: 1;
+	font-size: 60px;
+    width: 100%;               /* Ensure full width */
+    height: 100%;              /* Optional: Adjust if you need specific height */
+	}
 
-a {
-  color: #00B7FF;
-}
+#status {
+	text-align: center;
+	color: #FFF;
+	opacity: 1;
+	font-size: 60px;
+	
+	}
